.provarCaches/00D5h000009Q6XQEA0/objects/Book__c.object
<CustomObject>
    <description>Used to store books information</description>
    <fields>
        <fullName>Author_Name__c</fullName>
        <label>Author Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Category__c</fullName>
        <label>Book Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Action and Adventure</fullName>
                </value>
                <value>
                    <fullName>Comedy</fullName>
                </value>
                <value>
                    <fullName>Horror</fullName>
                </value>
                <value>
                    <fullName>Sci-fi</fullName>
                </value>
                <value>
                    <fullName>Kids</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoverImage__c</fullName>
        <label>CoverImage</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Marathi</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>